# edu-voice-ai-eval

./: .dockerignore  .gitignore  ATTRIBUTION.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  evaluate.yml  new_model.yml
architecture/: API_DESIGN.md  CLI_DESIGN.md  DATA_MODEL.md  INTEGRATION_POINTS.md  OVERVIEW.md  PLUGIN_SYSTEM.md  WEB_DASHBOARD.md
benchmarks/: GRADE_LEVEL_SYSTEM.md  LLM_BENCHMARKS.md  STT_BENCHMARKS.md  TTS_BENCHMARKS.md
configs/: default.yaml  education_focus.yaml  full_llm.yaml  on_device.yaml  quick_scan.yaml  stt_education.yaml  stt_standard.yaml  tts_quality.yaml
implementation/: PROJECT_STRUCTURE.md  ROADMAP.md  TECH_STACK.md
reference/: RESEARCH.md
tests/: conftest.py
tests/test_analyzer/: test_comparisons.py  test_regression.py  test_statistics.py
tests/test_core/: test_models.py
tests/test_grade_levels/: test_scorer.py
tests/test_metrics/: test_device.py
tests/test_plugins/: test_base.py
tests/test_storage/: test_sqlite.py
voicelearn_eval/: __init__.py  __main__.py
voicelearn_eval/analyzer/: comparisons.py  recommendations.py  regression.py  statistics.py  trends.py
voicelearn_eval/api/: app.py  dependencies.py  websocket.py
voicelearn_eval/api/routes/: baselines.py  compare.py  (+8 more)
voicelearn_eval/cli/: _helpers.py  compare.py  export_import.py  grade.py  list_cmd.py  main.py  model.py  plugin.py  run.py  schedule.py  serve.py  suite.py
voicelearn_eval/core/: config.py  models.py  orchestrator.py  schemas.py
voicelearn_eval/grade_levels/: mmlu_mapping.py  scorer.py  tiers.py
voicelearn_eval/metrics/: __init__.py  device.py
voicelearn_eval/plugins/: base.py  runner.py
voicelearn_eval/services/: download.py
voicelearn_eval/storage/: base.py  seed.py  sqlite_storage.py
voicelearn_eval/vlef/: exporter.py  importer.py
web/: next.config.ts  package-lock.json  package.json
(+23 files in other folders)
